11_minikube/deployments/chemistry/actinium/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actinium
  labels:
    app: actinium
spec:
  replicas: 1
  selector:
    matchLabels:
      app: actinium
  template:
    metadata:
      labels:
        app: actinium
    spec:
      volumes:
        - name: credentials
          hostPath:
            path: /mnt/minikube/credentials/actinium
            type: Directory
      containers:
        - name: actinium
          image: pierone.stups.zalan.do/cpp/actinium:latest
          imagePullPolicy: Never
          volumeMounts:
            - mountPath: /meta/credentials
              name: credentials
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 200m
              memory: 500Mi
            limits:
              cpu: 200m
              memory: 500Mi
