11_minikube/deployments/chemistry/actinium/ingress-playground.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actinium
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: actinium.playground.zalan.do
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: actinium
                port:
                  number: 8080
